# KLMC3

./: .taskfarm.c.swp  CMakeLists.txt  CMakeLists.txt.cray_gnu  LICENSE  README.md  error.c  file.c  main.c  master_worker_call_python.c  master_worker_python.c  master_worker_ready_input.c  master_worker_solidsolution-py.c  master_worker_task.c  master_worker_task.c.org  mpi_get_processor_name.c  originalCMakeLists.txt  print_message.c  read_input.c  taskfarm.c  taskfarm_def.c  taskfarm_main.c  timer.c  update.list
Example/TestRunGinFiles/AlGaNrun1171/: A0.gin  A1.gin  A10.gin  A100.gin  A1000.gin  A1001.gin  A1002.gin  A1003.gin  A1004.gin  A1005.gin  A1006.gin  A1007.gin  A1008.gin  A1009.gin  A101.gin  A1010.gin  A1011.gin  A1012.gin  A1013.gin  A1014.gin  A1015.gin  A1016.gin  A1017.gin  A1018.gin  A1019.gin  A102.gin  A1020.gin  A1021.gin  A1022.gin  A1023.gin  A1024.gin  A1025.gin  A1026.gin  A1027.gin  A1028.gin  A1029.gin  A103.gin  A1030.gin  A1031.gin  A1032.gin  (+1131 more)
Example/TestRunGinFiles/CeOrun200/: A113.gin  A121.gin  A126.gin  A128.gin  A138.gin  A143.gin  A147.gin  A149.gin  A155.gin  A16.gin  A162.gin  A164.gin  A196.gin  A205.gin  A220.gin  A233.gin  A24.gin  A245.gin  A252.gin  A35.gin  A56.gin  A57.gin  A59.gin  A74.gin  A91.gin
Example/TestRunGinFiles/Li2Srun1000/: A0.gin  A1.gin  A10.gin  A100.gin  A101.gin  A102.gin  A103.gin  A104.gin  A105.gin  A106.gin  A107.gin  A108.gin  A109.gin  A11.gin  A110.gin  A111.gin  A112.gin  A113.gin  A114.gin  A115.gin  A116.gin  A117.gin  A118.gin  A119.gin  A12.gin  A120.gin  A121.gin  A122.gin  A123.gin  A124.gin  A125.gin  A126.gin  A127.gin  A128.gin  A129.gin  A13.gin  A130.gin  A131.gin  A132.gin  A133.gin  (+960 more)
Example/TestRunGinFiles/MnOLirun200/: A0.gin  A1.gin  A10.gin  A101.gin  A102.gin  A105.gin  A109.gin  A11.gin  A112.gin  A113.gin  A114.gin  A115.gin  A116.gin  A119.gin  A120.gin  A123.gin  A124.gin  A131.gin  A136.gin  A138.gin  A139.gin  A14.gin  A141.gin  A142.gin  A143.gin  A148.gin  A149.gin  A150.gin  A152.gin  A154.gin  A156.gin  A159.gin  A16.gin  A162.gin  A163.gin  A165.gin  A166.gin  A167.gin  A169.gin  A17.gin  (+55 more)
Example/testrun_template/: SLURM_js.slurm  get_timing_energy_gnorm.sh  taskfarm.config
Example/testrun_template_gulp/: SGE_js.sh  SLURM_js.slurm  del.sh  get_timing.sh  get_timing_energy_gnorm.sh  scorep.slurm  taskfarm.config  wg_send_count.sh
Example/testrun_template_python/: SGE_js.sh  SLURM_js.slurm  del.sh  get_timing_energy_gnorm.sh  scorep.slurm  taskfarm.config  wg_send_count.sh
KLMC/: Algebra.f90  Annealing.f90  Atoms.f90  BasinHopping.f90  ClusterRoutines.f90  Config.f90  Environment.f90  File.f90  File.i90  Format.f90  GeneticAlgorithm.f90  Grid.f90  INFO  Library.f90  MPI-Comms.f90  Makefile  Master.f90  MonteCarlo.f90  Moveclass.f90  Population.f90  ProductionRun.f90  RdfRoutines.f90  RefineSprings.f90  SCOTT.f90  ScanBox.f90  Serial-Comms.f90  SolidSolution.f90  Testing.f90  Thresholds.f90  Timer.f90  UnitCell.f90  Utilities.f90
KLMC/Examples/3_SolidSolution_oNaFePO4/klmc_base/: aftertouch.sh  klmc.sh  replaceXtoA.sh
KLMC/Examples/3_SolidSolution_oNaFePO4/klmc_base/data/: Master.gin  MgMaster.gin  atoms.in  jobs  refMaster.gin  run.job  test1.gin
KLMC/data/: Master.dmol3  Master.gin  run.job
cmakelist/: CMakeLists.txt.cray  CMakeLists.txt.cray_cce  CMakeLists.txt.cray_gnu  CMakeLists.txt.intel
cmakelist_examples/: CMakeLists.txt  CMakeLists.txt.cpy  CMakeLists.txt.cray_cce  CMakeLists.txt.cray_gnu  CMakeLists.txt.intel  add_src.cmake  lib_check.cmake
cmakelist_examples/depreaceted/: CMakeLists.txt.cray_cce.outdated
cmakelist_examples/old_CMAKE/: CMakeLists.txt  CMakeLists.txt.cray_gnu  CMakeLists.txt.intel
deprecated_src/: master_worker_ready_input.c.org  master_worker_task.c.org  taskfarm_def.c.310823
develop/: unit_test.c
develop/dev_unittest/C/: fruit.txt  token.c
develop/dev_unittest/Fortran/: fortrantest.f90
develop/includes/: unit_test.h
h5klmc/ex1/: 1d.c  clean.sh  compile.sh  t1.c  t2.c  t3.c
h5klmc/ex1/h5dumps/: 1d.dump  t1.dump  t2.dump  t3.dump
h5klmc/ex2/: clean.sh  compile.sh  t1.c
h5klmc/io/: CMakeLists.txt  dev_string.c  io_custom_hdf5.c  main.c  number.c  split.c
h5klmc/io/A521/: cryst.cif  gulp.res  gulp_klmc.gin
h5klmc/io/includes/: io_custom_hdf5.h
includes/: a.out  error.h  file.h  layout.h  master_worker_python.h  master_worker_ready_input.h  master_worker_task.h  print_message.h  read_input.h  taskfarm_def.h  test.c  timer.h
inputfile_dev_miscis/: taskfarm.config
python_interface/: call_python_serial.c  python_interface.c  python_interface.h  python_serial_initfinal.c  version_checker.py
python_interface/include/: python_interface.h  python_serial.h
python_interface/includes/: python_serial.h
subprogram/: fsubroutine_pi.F90  gulpklmc.F90  subprogram_pi.c
subprogram/cf_binding/cmake_binding_practice_1/: CMakeLists.txt  call_fortran_main.c  compile.txt  fsubroutine_pi.f90
subprogram/cf_binding/cmake_binding_practice_2/: CMakeLists.txt  call_fortran_main.c  fsubroutine_pi.f90  fsubroutine_test.f90
subprogram/cf_binding/simple_binding_2/: fortran.f90  main.c
subprogram/cf_binding/src/: call_fortran_main.c  fsubroutine_pi.f90
subprogram/fortran/itself/: f_pi_main.f90
subprogram/fortran/split/: fsubroutine_pi.f90  main.f90  pi.x  task_id_15
subprogram/includes/: subprogram.h
subprogram/pi_itself/: a.out  subprogram_pi.c
subroutines/: fsubroutine_pi.F90  gulpklmc.F90  gulpklmc_deallocate_all.F90  gulpklmc_initmax.F90  subprogram_pi.c
subroutines/includes/: subroutines.h
